更新 CoursesController 加入「路由名稱」讓連線服務的參考可以取得更漂亮的方法名稱
